# chewback

./: README.md  docker-compose.yml  justfile  package.json  vite.config.ts
.cargo/: config.toml
docs-project/: app.md  architecture-decisions.md  best-practices.md  client.md  code-review-checklist.md  developer-guide.md  faq.md  overall.md  roadmap.md  server.md  summary.md
server/: Cargo.toml
server/migrations/: 20260301164621_create_users_table.sql  20260301165137_create_sessions_table.sql  20260301165202_update_tables.sql
server/src/: config.rs  database.rs  errors.rs  main.rs  rate_limiter.rs
server/src/handlers/: auth.rs
server/src/models/: api.rs  auth.rs  user.rs
server/src/routes/: mod.rs
server/src/routes/auth/: mod.rs
server/src/routes/users/: mod.rs
server/src/services/: mod.rs
server/src/services/auth/: extractors.rs  jwt.rs  middleware.rs  mod.rs  password.rs
src/: App.tsx  components-templates.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/api/: auth.ts  base-client.ts  commands.ts  index.ts  users.ts
src/bindings/: types.ts
src/context/: AuthContext.tsx
src/hooks/: useAuth.ts
src/pages/: AuthPage.tsx  HomePage.tsx  Layout.tsx
src/pages/components/: ChatDialog.tsx  ChatItem.tsx  ChatList.tsx  LoginForm.tsx  MessageBubble.tsx  MessageInput.tsx  RegisterForm.tsx  types.ts
