[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["json", "macros"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "net", "macros"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
dotenvy = "0.15.7"
tower = "0.5.3"
tower-cookies = "0.11.0"
tower-http = { version = "0.6.8", features = ["fs", "trace", "cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
utoipa = { version="5.4.0", features = ["axum_extras", "uuid", "chrono"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version="9.0.2", features = ["axum"] }
uuid = { version = "1.21.0", features = ["v4"] }
chrono = { version = "0.4.44", features = ["serde"] }
governor = "0.8.1"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
nonzero_ext = "0.3.0"
argon2 = "0.5"